Revision history for Catalyst-View-ByCode

        2010-04-01
        * bumped MooseX::AttributeHelpers to Version 0.23, as 0.22 fails
          Thanks, CPAN Testers!
        * tried Dist::Zilla as a packaging system -- looks much easier to use.
        
        2010-03-31
        * added a handy shortcut for checked, disabled, multiple, readonly
          and selected attributes rendering a true value to the 
          attribute's name
          eg: disabled => 1 will become disabled="disabled" in HTML
        * added a params() sub that allows to specify a series of
          param tags with one call.
        
        2010-03-29
        * fixed a bug that made block-definitions defined in 'old-scholl'
          fashion unable to read attr()-values. Only declare-defined
          blocks could read attr()-values.
          Added a test to verify the improvement.
          Bug reported by Phil Soehnlein
        * added a yield-test

0.09    2010-03-27
        * updated test requirements
        
0.08    2010-03-27
        * eliminated trunk/ directory
        * moved to Module::Install
        * fixed a test that failed on Windows because path separator
          was hard coded and wrong for this platform
        
0.07    2010-03-13
        * docs added, first CPAN upload

0.06    2010-03-01
        * changed version to 0.06
        * updated META.yml, MANIFEST
        * added some docs
        
        2010-03-02
        * added test for mixedCase and combined_name attribute keys
        * fixed doc typos, expanded docs
        * added logic to expand and shrink class names instead of setting them
          class 'abc';  # sets a class name, is now: 'abc'
          class '+xxx'; # adds class names,  is now: 'abc xyz'
          class '-xxx'; # removes things,    is now: 'abc'
          class 'uuu';  # set a name         is now: 'uuu'
          class '+a selected'                is now: 'a selected uuu'
          class '-a' 'uuu'                   is now: 'selected'