@@ -351,29 +351,187 @@ to forward stringification to their class-defined code.
 
 =item attr
 
+Setter or Getter for attribute values. Using the C<attr> sub refers to the
+latest open tag and sets or gets its attribute(s):
+
+    div {
+        attr(style => 'foo:bar');  # set 'style' attribute
+        attr('id') # get 'id' attribute (or undef)
+        
+        ... more things ...
+        a {
+            attr(href => 'http://foo.bar'); # refers to 'a' tag
+        };
+        
+        attr(lang => 'de'); # sets attribute in 'div' tag
+    };
+
 =item block
+
+define a block that may be uses like a tag. If a block is defined in a
+package, it is automatically added to the package's C<@EXPORT> array.
+
+    # define a block
+    block navitem {
+        my $id = attr('id'); # get the block's ID attribute (or undef)
+        my $href = attr('href');
+        li {
+            id $id if ($id);
+            a(href => $href || 'http://foo.bar') {
+                block_content;
+            };
+        };
+    };
+    
+    # use a block like a tag
+    block some_id (href => 'http://bar.baz') {
+        # this gets rendered by block_content() -- see above
+        'some text or other content';
+    }
+    
+    # will generate:
+    <li id="some_id">
+        <a href="http://bar.baz">some text or other content</a>
+    </li>
 
 =item block_content
 
+a simple shortcut to render the content of the block at a given point. See
+example above.
+
 =item c
+
+holds the content of the C<$c> variable. Simple write C<c->some_method>
+instead of C<$c->some_method>.
 
 =item class
 
+provides a shortcut for defining class names. All examples below will generate
+the same markup:
+
+    div { class 'class_name'; };
+    div { attr class => 'class_name'; };
+    div { attr('class', 'class_name'); };
+    div.class_name {};
+
 =item doctype
+
+a very simple way to generate a DOCTYPE declatation. Without any arguments, a
+HTML 4.0 doctype declaration will be generated. The arguments (if any) will
+consist of either of the words C<html> or C<xhtml> optionally followed by one
+or more version digits.
+
+some examples:
+
+    doctype;                # HTML 4.0
+    doctype 'html';         # HTML 4.01
+    doctype html => 4;      # HTML 4.01
+    doctype 'html 4';       # HTML 4.01
+    doctype 'html 4s';      # HTML 4.01 strict
+    doctype 'html 4strict'; # HTML 4.01 strict
+
+    doctype 'xhtml';        # XHTML 1.0
+    doctype 'xhtml 1 1';    # XHTML 1.0
 
 =item id
 
+provides a shortcut for defining id names. All examples here will generate the
+same markup:
+
+    div { id 'id_name'; };
+    div { attr id => 'id_name'; };
+    div { attr('id', 'id_name'); };
+    div id_name {};
+
 =item load
+
+an easy way to include assets into a page. Assets currently are JavaScript or
+CSS. The first argument to this sub specifies the kind of asset, the second
+argument is the URI to load the asset from.
+
+Some examples will clearify:
+
+    load js => '/static/js/jquery.js';
+    load css => '/static/css/site.css';
+
+If you plan to develop your JavaScript or CSS files as multiple files and like
+to combine them at request-time (with caching of course...), you might like to
+use L<Catalyst::Controller::Combine>. If your controllers are named C<Js> and
+C<Css>, this will work as well:
+
+    load Js => 'name_of_combined.js';
 
 =item on
 
+provides a syntactic sugar for generating inline JavaScript handlers.
+
+    a(href => '#') {
+        on click => q{alert('you clicked me'); return false};
+    };
+
 =item params
+
+generates a series of C<param> tags.
+
+    applet ( ... ) {
+        params(
+            quality => 'foo',
+            speed => 'slow',
+        );
+    };
 
 =item stash
 
+is a shortcut for C<c->stash>.
+
 =item template
 
+essentially generates a sub named C<RUN> as the main starting point of every
+template file. Both constructs will be identical:
+
+    sub RUN {
+        div { ... };
+    }
+    
+    template {
+        div { ... };
+    };
+
+Be careful to add a semicolon after the C<template> definition if you add code
+after it!!!
+
 =item yield
+
+Without arguments, C<yield> forwards exection to the next template in the
+ordinary execution chain. Typically this is the point in a wrapper template
+that includes the main template.
+
+With an argument, it forwards execution to the template given as the argument.
+These values are possible:
+
+=over
+
+=item just a symbolic name
+
+if a symbolic name is given, this name is searched in the C<<stash->{yield}->{...} >>
+hashref. If it is found, the file-name or subref stored there will be executed
+and included at the given point.
+
+=item a path name
+
+if a template file exists at the path name given as the argument, this
+template is compiled and executed.
+
+=item a code-ref
+
+a code ref is directly executed.
+
+=back
+
+If yield is not able to find something, simply nothing happens. This behavior
+could be useful to add hooks at specified positions in your markup that may
+get filled when needed.
+
 
 =back
 
@@ -544,21 +702,86 @@ See L<TRICKS/Setting hooks at various places> below.
 
 =head2 Using a wrapper
 
+If you construct a website that has lots of pages using the same layout, a
+wrapper will be your friend. Using the default settings, a simple file
+F<wrapper.pl> sitting in the root directory of your templates will do the job.
+As two alternatives you could set the C<$c->stash->{wrapper}> variable to
+another path name or specify a wrapper path as a config setting.
+
+    # wrapper.pl
+    html {
+        head {
+            # whatever you need
+        };
+        body {
+            # maybe heading, etc.
+            
+            # include your template here
+            yield; 
+        };
+    };
+
 =head2 Setting hooks at various places
+
+If you need to sometimes add things at different places, simply mark these positions like:
+
+    # in your wrapper:
+    html {
+        head {
+            # whatever you need
+            
+            # a hook for extra headings
+            yield 'head_extras';
+        };
+        body {
+            # a hook for something at the very beginning
+            yield 'begin';
+            
+            # maybe heading, etc.
+            
+            # a hook for something after your navigation block
+            yield 'after_navigation';
+            
+            # include your template here
+            yield; 
+            
+            # a hook for something after your content
+            yield 'end';
+        };
+    };
+    
+    # in an action of your controller:
+    $c->stash->{yield}->{after_navigation} = 'path/to/foo.pl';
+
+In the example above, some hooks are defined. In a controller, for the hook
+C<after_navigation>, a path to a template is filled. This template will get
+executed at the specified position and its content added before continuing
+with the wrapper template.
 
 =head2 Avoiding repetitions
 
+TODO: describe include directive
+
 =head2 Including FormFu or FormHandler
+
+TODO: example of stringification
 
 =head2 Create your own error page
 
+=head2 Using ByCode markup for other things.
+
+Very simple:
+
+    # in an action of your controller:
+    my $html = $c->forward('View::ByCode', render => [qw(list of files)]);
+
 =head2 Shortcuts
 
-- TODO: input(disabled => 1) instead of input(disabled => 'disabled')
+TODO: input(disabled => 1) instead of input(disabled => 'disabled')
 
-- TODO: input(checked => 1) instead of input(disabled => 'checked')
+TODO: input(checked => 1) instead of input(disabled => 'checked')
 
-- TODO: option(selected => 1) instead of option(selected => 'selected')
+TODO: option(selected => 1) instead of option(selected => 'selected')
 
     some_tag.some_class {
         class '+another_class';
@@ -646,16 +869,20 @@ sub _correct_message {
     return $msg;
 }
 
-=head2 process
+=head2 render
 
-fulfill the request (called from Catalyst)
+will be called by process to render things. If render is called with extra
+arguments, they are treated as wrapper, template, etc...
+
+returns the template result
 
 =cut
 
-sub process {
+sub render {
     my $self = shift;
     my $c = shift;
-
+    my @yield_list = @_;
+    
     #
     # beautify dies by replacing our strange file names
     # with the relative path of the wrapper or template
@@ -665,41 +892,42 @@ sub process {
     
     #
     # must render - find template and wrapper
+    # unless given as arguments
     #
-    my @yield_list = ();
-    
-    my $template = $c->stash->{template}
-        ||  $c->action . $self->extension;
-    if (!defined $template) {
-        $c->log->error('No template specified for rendering');
-        return 0;
-    } else {
-        my $path = $self->_find_template($c, $template);
-        my $sub;
-        if ($path && ($sub = $self->_compile_template($c, $path))) {
-            $c->log->debug("FOUND template '$template' -> '$path'") if $c->debug;
-            push @yield_list, $sub;
-        } else {
-            $c->log->error("requested template '$template' not found or not compilable");
+    if (!scalar(@_)) {
+        my $template = $c->stash->{template}
+            ||  $c->action . $self->extension;
+        if (!defined $template) {
+            $c->log->error('No template specified for rendering');
             return 0;
-        }
-    }
-
-    my $wrapper = exists($c->stash->{wrapper})
-        ? $c->stash->{wrapper}
-        : $self->wrapper;
-    if ($wrapper) {
-        my $path = $self->_find_template($c, $wrapper, $template); ### FIXME: must chop off last part from $template
-        my $sub;
-        if ($path && ($sub = $self->_compile_template($c, $path))) {
-            unshift @yield_list, $sub;
         } else {
-            $c->log->error("wrapper '$wrapper' not found or not compilable");
+            my $path = $self->_find_template($c, $template);
+            my $sub;
+            if ($path && ($sub = $self->_compile_template($c, $path))) {
+                $c->log->debug("FOUND template '$template' -> '$path'") if $c->debug;
+                push @yield_list, $sub;
+            } else {
+                $c->log->error("requested template '$template' not found or not compilable");
+                return 0;
+            }
         }
-    } else {
-        $c->log->info('no wrapper wanted') if $c->debug;
+        
+        my $wrapper = exists($c->stash->{wrapper})
+            ? $c->stash->{wrapper}
+            : $self->wrapper;
+        if ($wrapper) {
+            my $path = $self->_find_template($c, $wrapper, $template); ### FIXME: must chop off last part from $template
+            my $sub;
+            if ($path && ($sub = $self->_compile_template($c, $path))) {
+                unshift @yield_list, $sub;
+            } else {
+                $c->log->error("wrapper '$wrapper' not found or not compilable");
+            }
+        } else {
+            $c->log->info('no wrapper wanted') if $c->debug;
+        }
     }
-
+    
     #
     # run render-sequence
     #
@@ -707,10 +935,25 @@ sub process {
     $c->stash->{yield}->{content} = \@yield_list;
     init_markup($self, $c);
     
-    Catalyst::View::ByCode::Renderer::yield;
+    Catalyst::View::ByCode::Renderer::yield();
     
-    $c->response->body(get_markup());
+    my $content = get_markup();
     clear_markup;
+    
+    return $content;
+}
+
+=head2 process
+
+fulfill the request (called from Catalyst)
+
+=cut
+
+sub process {
+    my $self = shift;
+    my $c = shift;
+    
+    $c->response->body( $self->render($c, @_) );
     
     return 1; # indicate success
 }
